--- a/resources/sass/menu.scss
+++ b/resources/sass/menu.scss
@@ -1,3 +1,7 @@
+body{
+    width: 100%;
+    margin: 0;
+}
 .menu{
     top: 0;
     position: fixed;
@@ -5,4 +9,20 @@
     color: black;
     width: 100%;
     height: 80px;
+}
+.menu-button{
+    float: right;
+    margin-right: 30px;
+    padding-top: 30px;
+}
+ul, li{
+    list-style: none;
+}
+li{
+    float: left;
+}
+.logo{
+    float: left;
+    padding-left: 30px;
+    padding-top: 5px;
 }
