--- a/resources/sass/menu.scss
+++ b/resources/sass/menu.scss
@@ -26,3 +26,11 @@ li{
     padding-left: 30px;
     padding-top: 5px;
 }
+.footer{
+    top: 0;
+    position: fixed;
+    background-color: white;
+    color: black;
+    width: 100%;
+    height: 80px;
+}
