--- a/resources/sass/main.scss
+++ b/resources/sass/main.scss
@@ -1,8 +1,10 @@
 ul, li {
     list-style: none;
+    margin: 0;
+    padding: 0;
 }
 
-#menu {
+#topmenu {
     font-family: 'EBSJSK Bold';
     top: 0;
     position: fixed;
@@ -10,24 +12,11 @@ ul, li {
     color: black;
     width: 100%;
     height: 80px;
-    line-height: 80px;
-    z-index: 10;
     box-shadow: 5px 5px 10px black;
-    li {
-        float: left;
-    }
     .logo {
         float: left;
         padding-left: 30px;
         padding-top: 10px;
-    }
-    .menu-button {
-        float: right;
-        margin-right: 30px;
-        li {
-        font-size: 20px;
-        padding-right: 5px;
-        }
     }
 }
 
@@ -37,7 +26,7 @@ ul, li {
     right: 20px;
     top: 200px;
     width: 88px;
-    z-index: 9;
+    z-index: -1;
     .squarebutton{
         width: auto;
         height: 80px;
@@ -62,7 +51,7 @@ ul, li {
             0 .1em .25em hsla(0,0%,0%,.5);
         position: relative;
     }
-    .join{
+    .on{
         filter: brightness(70%);
     }
 }
