--- a/resources/sass/main.scss
+++ b/resources/sass/main.scss
@@ -13,6 +13,7 @@ ul, li {
     width: 100%;
     height: 80px;
     box-shadow: 5px 5px 10px black;
+    z-index: 2;
     .logo {
         float: left;
         padding-left: 30px;
